2013-02-10  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* dfp/math.h (quantumd32): Add prototype.
	(__quantumd32): Likewise.
	(quantumd64): Likewise.
	(__quantumd64): Likewise.
	(quantumd128): Likewise.
	(__quantumd128): Likewise.
	* ieee754r/Makefile: Add quantumd[32|64|128] objects.
	* ieee754r/Versions (LIBDFP_1.0.9): Add quantum symbols.
	* ieee754r/quantumd128.c: New file quantumd128 software
	implementation.
	* ieee754r/quantumd64.c: New file quantumd64 software
	implementation.
	* ieee754r/quantumd32.c: New file quantumd32 software
	implementation.
	* tests/test-quantum.c: New file: testcases for quantumd[32|64|128]
	implementation.
	* Makefile.in: Add test-quantum.

2013-02-10  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* base-math/classify.c (__dfp_classify_sf): Fix code for little
	endian.
	(__dfp_classify_df): Likewise.
	* sysdeps/generic/math_private.h (ieee754_float_shape_type): New
	union to float conversion to/from unsigned word.
	(ieee754_double_shape_type): New union to double conversion to/from
	unsigned doubleword.

2013-02-09  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/dfpu/roundevend128.c: New file: roundevend128
	optimized implementation for PowerPC.
	* sysdeps/powerpc/dfpu/roundevend32.c: New file: roundevend64
	optimized implementation for PowerPC.
	* sysdeps/powerpc/dfpu/roundevend64.c: New file: roundevend32
	optimized implementation for PowerPC.

2013-02-09  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* dfp/math.h (roundeven32): Add prototype.
	(__roundevend32): Likewise.
	(roundeven64): Likewise.
	(__roundeven64): Likewise.
	(roundeven128): Likewise.
	(__roundeven128): Likewise.
	* ieee754r/Makefile: Add roundeven[32|64|128] objects.
	* ieee754r/Versions (LIBDFP_1.0.9): Add roundeven symbols.
	* ieee754r/roundevend128.c: New file: roundevend128 software
	implementation.
	* ieee754r/roundevend32.c: New file: roundevend32 software
	implementation.